--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -693,6 +693,7 @@
   "Test Model": "Testmodell",
   "Test successful": "Test erfolgreich",
   "Testing...": "Testen...",
+  "Text Only": "Nur Text",
   "Text Request": "Textanfrage",
   "Thank you for your report": "Vielen Dank für Ihren Bericht",
   "The {{model}} API does not support files. Please download <LinkToHomePage>the desktop app</LinkToHomePage> for local processing.": "Die {{model}}-API unterstützt keine Dateien. Bitte laden Sie <LinkToHomePage>die Desktop-App</LinkToHomePage> herunter, um lokal zu verarbeiten.",
