--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -607,6 +607,7 @@
   "Test Results": "Test Results",
   "Test successful": "Test successful",
   "Testing...": "Testing...",
+  "Text Only": "Text Only",
   "Text Request": "Text Request",
   "Thank you for your report": "Thank you for your report",
   "The conversation list has been successfully recovered": "The conversation list has been successfully recovered",
