--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -691,6 +691,7 @@
   "Test Model": "Modelo de Teste",
   "Test successful": "Teste bem-sucedido",
   "Testing...": "A testar...",
+  "Text Only": "Apenas Texto",
   "Text Request": "Pedido de Texto",
   "Thank you for your report": "Obrigado pelo seu relatório",
   "The {{model}} API does not support files. Please download <LinkToHomePage>the desktop app</LinkToHomePage> for local processing.": "A API {{model}} não suporta ficheiros. Por favor, baixe <LinkToHomePage>a aplicação de desktop</LinkToHomePage> para processamento local.",
